[package]
name = "untitled"
version = "0.1.0"
authors = ["chao.yang <chao.yang.phoenixstudio@puzzleplusgames.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
num = "0.3"
num-traits = "0.2"
log = "0.4.0"
fern = "0.5"
chrono = "0.4"
simple_logger = "1.0"
winit = "0.21.0"
gfx-hal = "0.5"
arrayvec = "0.4"
gfx-backend-vulkan = "0.5"

